demo.brendabeltran.me/brenda-demo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brenda-demo-backend
spec:
  selector:
    matchLabels:
      app: brenda-demo-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: brenda-demo-backend
    spec:
      containers:
      - name: frontend
        image: beltranalex928/workwaves-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2000
