demo.brendabeltran.me/brenda-demo-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: brenda-demo
spec:
  selector:
    matchLabels:
      app: brenda-demo
  template:
    metadata:
      labels:
        app: brenda-demo
    spec:
      containers:
      - name: frontend
        image: beltranalex928/workwaves-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
