demo.brendabeltran.me/brenda-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brenda-demo-frontend
  labels:
    app: brenda-demo-frontend
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 31013
  selector:
    app: brenda-demo
